[gd_scene load_steps=32 format=3 uid="uid://blxmwn4jq2mot"]

[ext_resource type="PackedScene" uid="uid://dsoiq0u4jfsqb" path="res://example/src/inventory_menu.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://cqa45c6lfsffv" path="res://addons/wyvernbox_prefabs/tooltip.tscn" id="3"]
[ext_resource type="Script" path="res://addons/wyvernbox/ground/ground_items_manager.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://e8rkhrvavj7l" path="res://example/src/world/inworld_container.tscn" id="6"]
[ext_resource type="Script" path="res://example/src/test_3d_char.gd" id="7"]
[ext_resource type="Resource" path="res://example/wyvernbox/item_generators/basic_loot.tres" id="8"]
[ext_resource type="PackedScene" uid="uid://cesxtk10fira3" path="res://addons/wyvernbox_prefabs/ground_item_stack_view_3d.tscn" id="9"]
[ext_resource type="Script" path="res://addons/wyvernbox/item_instantiator.gd" id="10"]
[ext_resource type="Script" path="res://addons/wyvernbox/inventories/grid_inventory.gd" id="11"]
[ext_resource type="PackedScene" uid="uid://dk2b3ordhblc2" path="res://addons/wyvernbox_prefabs/inventories/grid_inventory.tscn" id="12"]
[ext_resource type="Resource" uid="uid://bc5mn5etsfr76" path="res://example/wyvernbox/item_generators/random_enchanted_equip.tres" id="13"]
[ext_resource type="Resource" uid="uid://ba1ie6jofkmu8" path="res://example/wyvernbox/item_types/consumable/coin_gold.tres" id="14"]
[ext_resource type="PackedScene" uid="uid://boij7wcxmvnq7" path="res://addons/wyvernbox_prefabs/grabbed_item_stack_view.tscn" id="14_ucbti"]
[ext_resource type="Resource" uid="uid://bdo8mj57sn4es" path="res://example/wyvernbox/item_types/consumable/coin_purple.tres" id="15"]
[ext_resource type="Script" path="res://example/src/world/touch_dropper.gd" id="16"]
[ext_resource type="Theme" uid="uid://75b71yv7xu1e" path="res://example/theme/default.tres" id="17_ici5q"]

[sub_resource type="CylinderShape3D" id="1"]
radius = 0.56303

[sub_resource type="CylinderMesh" id="7"]
top_radius = 0.568
bottom_radius = 0.568
height = 1.999
radial_segments = 15

[sub_resource type="CylinderShape3D" id="8"]
height = 3.02818
radius = 0.805338

[sub_resource type="BoxShape3D" id="2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i1865"]
albedo_color = Color(0.576471, 0.270588, 0.0313726, 1)

[sub_resource type="BoxMesh" id="3"]
material = SubResource("StandardMaterial3D_i1865")

[sub_resource type="Resource" id="22"]
resource_name = "Drop Chaotically"
script = ExtResource("10")
items_to_add = Array[Resource("res://addons/wyvernbox/crafting/item_like.gd")]([ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("14"), ExtResource("15"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8")])
item_repeat_ranges = Array[Vector2]([Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(5, 100), Vector2(5, 100), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1)])
item_chances = Array[float]([100.0, 50.0, 50.0, 50.0, 100.0, 20.0, 50.0, 50.0, 50.0, 50.0, 50.0])
repeat_post_chance = true
randomize_locations = true
delay_between_items = 0.1
spread_distance = 4.0
spread_cone_degrees = 360.0
spread_angle_degrees = 0.0

[sub_resource type="SphereShape3D" id="14"]

[sub_resource type="SphereMesh" id="15"]

[sub_resource type="Resource" id="21"]
resource_name = "Drop In Circle"
script = ExtResource("10")
items_to_add = Array[Resource("res://addons/wyvernbox/crafting/item_like.gd")]([ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("14"), ExtResource("15"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8"), ExtResource("8")])
item_repeat_ranges = Array[Vector2]([Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(5, 100), Vector2(5, 100), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1)])
item_chances = Array[float]([100.0, 50.0, 50.0, 50.0, 100.0, 20.0, 50.0, 50.0, 50.0, 50.0, 50.0])
repeat_post_chance = true
randomize_locations = false
delay_between_items = 0.1
spread_distance = 4.0
spread_cone_degrees = 360.0
spread_angle_degrees = 0.0

[sub_resource type="Resource" id="Resource_flmx5"]
resource_local_to_scene = true
resource_name = "GridInventory"
script = ExtResource("11")
height = 12
width = 8

[sub_resource type="Resource" id="12"]
resource_name = "Random Equips"
script = ExtResource("10")
items_to_add = Array[Resource("res://addons/wyvernbox/crafting/item_like.gd")]([ExtResource("13"), ExtResource("15"), ExtResource("15"), ExtResource("14"), ExtResource("14"), ExtResource("14"), ExtResource("14")])
item_repeat_ranges = Array[Vector2]([Vector2(8, 8), Vector2(5, 100), Vector2(5, 100), Vector2(5, 100), Vector2(5, 100), Vector2(5, 100), Vector2(5, 100)])
item_chances = Array[float]([100.0, 100.0, 100.0, 100.0, 100.0, 100.0, 100.0])
repeat_post_chance = true
randomize_locations = true
delay_between_items = 0.0
spread_distance = 32.0
spread_cone_degrees = 360.0
spread_angle_degrees = 0.0

[sub_resource type="Resource" id="Resource_ciqfj"]
resource_local_to_scene = true
resource_name = "GridInventory"
script = ExtResource("11")
height = 12
width = 8

[sub_resource type="Sky" id="6"]

[sub_resource type="Environment" id="5"]
background_mode = 2
sky = SubResource("6")
ambient_light_sky_contribution = 0.0

[node name="Node" type="Node"]

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 147.626, 0, 0)

[node name="Hero" type="CharacterBody3D" parent="Node3D" groups=["hero"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.02218, 0)
script = ExtResource("7")
movespeed = 8.0
generator = ExtResource("8")
inventory_menu = NodePath("../../Inventory/InventoryMenu")
inventory_tooltip = NodePath("../../Inventory/Tooltip")
ground_items = NodePath("../Items")

[node name="Shape3D" type="CollisionShape3D" parent="Node3D/Hero"]
shape = SubResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/Hero"]
mesh = SubResource("7")

[node name="Area3D" type="Area3D" parent="Node3D/Hero"]
input_ray_pickable = false

[node name="Shape3D" type="CollisionShape3D" parent="Node3D/Hero/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.470862, 0)
shape = SubResource("8")

[node name="StaticBody3D" type="StaticBody3D" parent="Node3D"]
transform = Transform3D(88.5146, 0, 0, 0, 1, 0, 0, 0, 88.5146, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/StaticBody3D"]
shape = SubResource("2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/StaticBody3D"]
mesh = SubResource("3")

[node name="Items" type="Node3D" parent="Node3D"]
script = ExtResource("5")
autosave_file_path = "items/ground/area2.dat"
item_scene = ExtResource("9")
spawn_jump_length_range = Vector2(2, 3)

[node name="Loot" type="Node3D" parent="Node3D"]

[node name="Area3D" type="Area3D" parent="Node3D/Loot"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -8.01845, 1.79794, -1.61708)
script = ExtResource("16")
ground_item_manager = NodePath("../../Items")
collide_with_group = &"hero"
loot_table = SubResource("22")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/Loot/Area3D"]
shape = SubResource("14")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/Loot/Area3D"]
mesh = SubResource("15")

[node name="Area2" type="Area3D" parent="Node3D/Loot"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -5.04234, 1.79794, 1.98245)
script = ExtResource("16")
ground_item_manager = NodePath("../../Items")
collide_with_group = &"hero"
loot_table = SubResource("22")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/Loot/Area2"]
shape = SubResource("14")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/Loot/Area2"]
mesh = SubResource("15")

[node name="Area3" type="Area3D" parent="Node3D/Loot"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -12.0175, 1.79794, 1.15324)
script = ExtResource("16")
ground_item_manager = NodePath("../../Items")
collide_with_group = &"hero"
loot_table = SubResource("22")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/Loot/Area3"]
shape = SubResource("14")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/Loot/Area3"]
mesh = SubResource("15")

[node name="Area4" type="Area3D" parent="Node3D/Loot"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -8.97924, 1.79794, 4.98049)
script = ExtResource("16")
ground_item_manager = NodePath("../../Items")
collide_with_group = &"hero"
loot_table = SubResource("22")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/Loot/Area4"]
shape = SubResource("14")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/Loot/Area4"]
mesh = SubResource("15")

[node name="Area5" type="Area3D" parent="Node3D/Loot"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 10.0848, 1.79794, -0.164448)
script = ExtResource("16")
ground_item_manager = NodePath("../../Items")
collide_with_group = &"hero"
loot_table = SubResource("21")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/Loot/Area5"]
shape = SubResource("14")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/Loot/Area5"]
mesh = SubResource("15")

[node name="Area6" type="Area3D" parent="Node3D/Loot"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 5.96548, 1.79794, 2.08864)
script = ExtResource("16")
ground_item_manager = NodePath("../../Items")
collide_with_group = &"hero"
loot_table = SubResource("21")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/Loot/Area6"]
shape = SubResource("14")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/Loot/Area6"]
mesh = SubResource("15")

[node name="Area7" type="Area3D" parent="Node3D/Loot"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 8.21325, 1.79794, 5.13328)
script = ExtResource("16")
ground_item_manager = NodePath("../../Items")
collide_with_group = &"hero"
loot_table = SubResource("21")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/Loot/Area7"]
shape = SubResource("14")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/Loot/Area7"]
mesh = SubResource("15")

[node name="Area8" type="Area3D" parent="Node3D/Loot"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 12.5391, 1.79794, 2.88898)
script = ExtResource("16")
ground_item_manager = NodePath("../../Items")
collide_with_group = &"hero"
loot_table = SubResource("21")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/Loot/Area8"]
shape = SubResource("14")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D/Loot/Area8"]
mesh = SubResource("15")

[node name="Openable" type="Node3D" parent="Node3D"]

[node name="Chest" parent="Node3D/Openable" instance=ExtResource("6")]
transform = Transform3D(0.413263, 0, -0.910612, 0, 1, 0, 0.910612, 0, 0.413263, -2.5152, 1.34766, -4.27634)

[node name="Inventory" parent="Node3D/Openable/Chest" instance=ExtResource("12")]
visible = false
custom_minimum_size = Vector2(112, 168)
offset_left = -313.0
offset_top = -39.0
offset_right = -201.0
offset_bottom = 129.0
inventory = SubResource("Resource_flmx5")
contents = SubResource("12")
init_contents = true
interaction_mode = 5
auto_take_priority = 0
cell_size = Vector2(14, 14)
selected_item_empty_only = false
show_backgrounds = true
view_filter_color = Color(0.1, 0.15, 0.3, 0.75)
view_filter_patterns = []
autosave_file_path = "items/world/chest1.dat"
autosave_intensity = 2
save_extra_data = {}

[node name="Control2" type="Control" parent="Node3D/Openable/Chest/Inventory"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 10

[node name="Button" type="Button" parent="Node3D/Openable/Chest/Inventory/Control2"]
layout_mode = 0
offset_left = 3.0
offset_top = -20.0
offset_right = 21.0
size_flags_horizontal = 10
size_flags_vertical = 10
text = "?"

[node name="Chest2" parent="Node3D/Openable" instance=ExtResource("6")]
transform = Transform3D(-0.645324, 0, -0.763909, 0, 1, 0, 0.763909, 0, -0.645324, 4.40275, 1.34766, -3.99078)

[node name="Inventory" parent="Node3D/Openable/Chest2" instance=ExtResource("12")]
visible = false
custom_minimum_size = Vector2(112, 168)
offset_left = -201.0
offset_top = 20.0
offset_right = -89.0
offset_bottom = 188.0
inventory = SubResource("Resource_ciqfj")
contents = SubResource("12")
init_contents = true
interaction_mode = 5
auto_take_priority = 0
cell_size = Vector2(14, 14)
selected_item_empty_only = false
show_backgrounds = true
view_filter_color = Color(0.1, 0.15, 0.3, 0.75)
view_filter_patterns = []
autosave_file_path = "items/world/chest2.dat"
autosave_intensity = 2
save_extra_data = {}

[node name="Control" type="Control" parent="Node3D/Openable/Chest2/Inventory"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 10

[node name="Button" type="Button" parent="Node3D/Openable/Chest2/Inventory/Control"]
layout_mode = 0
offset_left = 3.0
offset_top = -20.0
offset_right = 21.0
size_flags_horizontal = 10
size_flags_vertical = 10
text = "?"

[node name="WorldEnvironment" type="WorldEnvironment" parent="Node3D"]
environment = SubResource("5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Node3D"]
transform = Transform3D(1.91069e-15, -1, -4.37114e-08, -0.522647, -3.72661e-08, 0.852549, -0.852549, 2.28456e-08, -0.522647, -9.53674e-07, 10.1265, -8.46388)
directional_shadow_mode = 0

[node name="Camera3D" type="Camera3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.584391, 0.811472, 0, -0.811472, 0.584391, -0.0395966, 14.83, 12.56)

[node name="Inventory" type="CanvasLayer" parent="."]

[node name="Generator" type="Button" parent="Inventory"]
offset_left = 286.0
offset_top = 290.0
offset_right = 342.0
offset_bottom = 310.0
focus_mode = 0

[node name="Label" type="Label" parent="Inventory/Generator"]
layout_mode = 0
offset_left = -78.0
offset_top = 25.0
offset_right = 134.0
offset_bottom = 39.0
text = "(Press Tab or I to open inventory)"

[node name="Label2" type="Label" parent="Inventory/Generator"]
layout_mode = 0
offset_left = -78.0
offset_top = 40.0
offset_right = 136.0
offset_bottom = 54.0
text = "(Hold Alt to highlight items)"

[node name="InventoryMenu" parent="Inventory" instance=ExtResource("1")]

[node name="GrabbedItem" parent="Inventory/InventoryMenu" instance=ExtResource("14_ucbti")]
drop_at_node = NodePath("../../../Node3D/Hero")
drop_ground_item_manager = NodePath("../../../Node3D/Items")

[node name="InworlnventoriesTutorial" type="AcceptDialog" parent="Inventory/InventoryMenu"]
dialog_text = "This inventory has random stuff! An ItemInstantiator put them here.
These can also drop items to the ground.

The chest's contents are displayed here by just duplicating the chest's
InventoryView. Not just the Inventory resource - that way custom
inventory layouts and extra nodes (like this ? button) can be used!"

[node name="Tooltip" parent="Inventory" instance=ExtResource("3")]
visible = false
offset_left = 198.0
offset_top = -23.0
offset_right = 358.0
offset_bottom = 52.0
theme = ExtResource("17_ici5q")
compare_to_inventory = NodePath("../InventoryMenu/CenterContainer/TabContainer/Equip/Control/Equip")
color_neutral = Color(0.376471, 0.376471, 0.376471, 1)

[connection signal="body_entered" from="Node3D/Hero/Area3D" to="Node3D/Hero" method="_on_ItemPickup_body_entered"]
[connection signal="item_clicked" from="Node3D/Items" to="Node3D/Hero" method="_on_items_item_clicked"]
[connection signal="pressed" from="Inventory/Generator" to="Node3D/Hero" method="_on_Generator_pressed"]
